FIX: Remove variable injection from theme setting
This is currently making use of a bug in core, which will soon be patched. It should not be possible to put executable sass code into a theme variable.

--- a/settings.yml
+++ b/settings.yml
@@ -1,5 +1,5 @@
 theme_background:
-  default: "#{$vincent-background}"
+  default: ""
   description:
     en: If you wish to change the default background add the url of the new background above.
 dark_background_overlay:
